# ssloy_software_renderer

./: .gitignore  CMakeLists.txt  README.md
buggy_images/: bresenham_fail_1.tga  bresenham_fail_2.tga  lesson2_05.tga  line_discontinuous_fail.tga  triangle_barycentric_light.tga  triangle_barycentric_light2.tga  triangle_barycentric_sign_bit_leq0.tga  triangle_barycentric_sign_bit_less0.tga
correct_images/: lesson2.tga  lesson2_05.tga  lesson3.tga  lesson3_05.tga  lesson3_hw.tga  lesson4.tga  lesson5.tga
src/: geometry.hpp  line_bresenham.hpp  line_discontinuous.hpp  matrix.hpp  model.cpp  model.hpp  software_renderer.cpp  tgaimage.cpp  triangle_barycentric.hpp  triangle_depth.hpp  triangle_depth_texture.hpp  triangle_depth_texture_gouraud.hpp  vec.hpp
